# HoNCAML

./: .buildinfo  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TAGS  TODO.md  configuration.html  genindex.html  index.html  objects.inv  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  usage.html  what.html
.doctrees/: configuration.doctree  environment.pickle  index.doctree  reference.doctree  usage.doctree  what.doctree
.github/workflows/: pip.yml  sphinx.yml
_sources/: reference.rst.txt  usage.rst.txt  what.rst.txt
_static/: alabaster.css
automlbenchmark/: README.md
automlbenchmark/resources/: frameworks.yaml
config/: models.yaml  requirements.txt  settings.yaml
config/pipelines/: base_pipeline.yaml  boston_benchmark.yaml  classification_full_example.yaml  classification_predict.yaml  classification_train.yaml  kc_house_base.yaml  regression_predict.yaml  regression_train.yaml  test_pipeline.yaml
data/raw/: README.md
docs/source/: conf.py  configuration.rst  index.rst  reference.rst  usage.rst  what.rst
honcaml/: __init__.py  __main__.py  config.py  main.py
honcaml/benchmark/: __init__.py  base.py  sklearn.py  torch.py  trainable.py
honcaml/config/: default_params.py  defaults.py  user.py
honcaml/data/: base.py  extract.py  load.py  normalization.py  tabular.py  transform.py
honcaml/exceptions/: benchmark.py  data.py  model.py  pipeline.py
honcaml/models/: base.py  evaluate.py  general.py  sklearn_model.py  torch_model.py  trainable.py
honcaml/steps/: __init__.py  base.py  benchmark.py  data.py  model.py
honcaml/tests/: utils.py
honcaml/tools/: custom_typing.py  execution.py  logger_option.py  pipeline.py  save_name_holder.py  startup.py  utils.py
honcaml/visualization/: app_execution.py  constants.py  defaults.py  define_config_file.py  extract.py  gui.py  load.py  manual_configs.py  tests.ipynb  utils.py  visualization.py
paper/: Makefile  README.md  requirements.txt
paper/plots/: rank_classification.csv  rank_regression.csv  var_classification.csv  var_regression.csv
paper/requirements/: autogluon.txt  flaml.txt  (+9 more)
src/: main.py
(+194 files in other folders)
